moved vars to .env

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
+#!/bin/sh
 alias ntest="npm run test --"
 alias nbuild="npm run build"
 alias nclean="npm run clean"
 alias nrun="node src/main"
+
+#vars (DO NOT COMMIT THESE)
+export DISCORD_BOT_API_KEY=your key here
+export MC_SERVER_ENDPOINT=your endpoint here
