removed vars from .env, made env source vars file

--- a/.env
+++ b/.env
@@ -4,6 +4,5 @@ alias nbuild="npm run build"
 alias nclean="npm run clean"
 alias nrun="node src/main"
 
-#vars (DO NOT COMMIT THESE)
-export DISCORD_BOT_API_KEY=your key here
-export MC_SERVER_ENDPOINT=your endpoint here
+#vars file
+source .vars
