removed platform spesification in package.json, will build to current target by default

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "pkg": {
     "outputPath": "./Build",
     "targets": [
-      "node18-linux"
+      "node18"
     ],
     "assets": [
       "./src/**/*"
