--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "bin": "./src/main.js",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@types/cli-color": "^2.0.2",
     "cli-color": "^2.0.3",
     "discord.js": "^14.11.0",
