--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cli-color": "^2.0.2",
     "cli-color": "^2.0.3",
     "discord.js": "^14.11.0",
+    "tweetnacl": "^1.0.3",
     "ws": "^8.13.0"
   }
 }
