--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npx tsc && echo \"--- START PROGRAM ---\" && node src/main",
     "run": "node src/main",
     "build": "npx tsc && npx pkg package.json -C Brotli",
-    "clean": "find ./src -name \"*.js\" -type f | while read file; do rm -v \"$file\"; done"
+    "clean": "find ./src -name \"*.js\" -type f | while read file; do rm -v \"$file\"; done",
+    "package": "npm i && npx npm run build && npm run clean"
   },
   "author": "",
   "license": "GPL-2.0-only",
