--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "npx tsc && echo \"--- START PROGRAM ---\" && node src/main",
-    "run": "node src/main",
+    "start": "npx tsc && echo \"--- START PROGRAM ---\" && node src/main",
     "build": "npx tsc && npx pkg package.json -C Brotli",
     "clean": "find ./src -name \"*.js\" -type f | while read file; do rm -v \"$file\"; done"
   },
